[package]
name = "tetris_rust_bevy_ver0_16"
version = "0.1.0"
edition = "2024"

[dependencies]
# Disable default features to avoid native audio/gamepad deps on WSL
bevy = { version = "0.16.1", default-features = false, features = [
    "bevy_asset",
    "bevy_winit",
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "bevy_state",
    "png",
    "x11",
] }
rand = "0.9.2"
